Added link to CSS and header container div.

--- a/wjon.html
+++ b/wjon.html
@@ -1,9 +1,12 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title></title>
+	<title>WJON</title>
+	<link rel="stylesheet" href="wjon.css">
 </head>
 <body>
-<p> Explaining branches</p>
+<header>
+	<div "header-container">
+	</div>
 </body>
 </html>
