Added name and tagline

--- a/wjon.html
+++ b/wjon.html
@@ -6,7 +6,9 @@
 </head>
 <body>
 <header>
-	<div "header-container">
+	<div class="header-container">
+		<h1>WJON</h1>
+		<h2>getting you through your daily commute</h2>
 	</div>
 </body>
 </html>
