Added paragraph text

--- a/wjon.html
+++ b/wjon.html
@@ -1,9 +1,19 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title></title>
+	<title>WJON</title>
+	<link rel="stylesheet" href="wjon.css">
 </head>
 <body>
+	<div>
+		<h1>What is WJON?</h1>
+		<p>WJON is a community-funded HAM radio channel serving the five-county area. Tune in for updates on regional rail delays, quiet car disruptions, platform aroma, commuter rage indices, etc.</p>
+	</div>
+	<div>
+		<h1>WJON Needs Money Immediately</h1>
+		<p>John Crodian is the loan broadcaster at WJON. He just sits in the back of a train car and yells into a transmitter until service shuts down. Your donation pays for his lunch.</p>
+	</div>
+
 
 </body>
 </html>
