--- a/wjon.html
+++ b/wjon.html
@@ -19,5 +19,8 @@
 		<h1>WJON Needs Money Immediately</h1>
 		<p>John Crodian is the loan broadcaster at WJON. He just sits in the back of a train car and yells into a transmitter until service shuts down. Your donation pays for his lunch.</p>
 	</div>
+		<footer>
+			<p>WHAT MORE IS THERE TO SAY????</p>
+		<footer>
 </body>
 </html>
