Added H2 to Body

--- a/wjon.html
+++ b/wjon.html
@@ -13,6 +13,7 @@
 	</header>
 	<div>
 		<h1>What is WJON?</h1>
+		<h2> It is an AWESOME radio station!</h2>
 		<p>WJON is a community-funded HAM radio channel serving the five-county area. Tune in for updates on regional rail delays, quiet car disruptions, platform aroma, commuter rage indices, etc.</p>
 	</div>
 	<div>
