--- a/wjon.html
+++ b/wjon.html
@@ -13,14 +13,17 @@
 	</header>
 	<div>
 		<h1>What is WJON?</h1>
-		<p>WJON is a community-funded HAM radio channel serving the five-county area. Tune in for updates on regional rail delays, quiet car disruptions, platform aroma, commuter rage indices, etc.</p>
+		<p>WJON is a community-funded Ham radio channel serving the five-county area. Tune in for updates on regional rail delays, quiet car disruptions, platform aroma, commuter rage indices, etc.</p>
+		<p>Note: You will need to build a radio capable of receiving WJON's signal. We recommend you consult with Brian at the Ham Radio Outlet (1509 Dupont Hwy, New Castle, Delaware) or pick up a copy of Jack Campbell's "Ham Radio: The Ultimate Ham Radio Quickstart Guide- From Beginner to Expert," Harcourt, $12.99, paperbak.
 	</div>
 	<div>
 		<h1>WJON Needs Money Immediately</h1>
 		<p>John Crodian is the loan broadcaster at WJON. He just sits in the back of a train car and yells into a transmitter until service shuts down. Your donation pays for his lunch.</p>
 	</div>
 		<footer>
+			<div class= "interrogative">
 			<p>WHAT MORE IS THERE TO SAY????</p>
+			</div>
 		<footer>
 </body>
 </html>
