Modified color, font and padding/margin in header

--- a/wjon.html
+++ b/wjon.html
@@ -7,8 +7,8 @@
 <body>
 	<header>
 		<div class="header-container">
-			<h1>WJON</h1>
-			<h2>getting you through your daily commute</h2>
+			<h1 id="name">WJON</h1>
+			<h2>Helping you face the realities of SEPTA</h2>
 		</div>
 	</header>
 	<div>
