Name fits and header size is fixed

--- a/wjon.html
+++ b/wjon.html
@@ -8,7 +8,7 @@
 	<header>
 		<div class="header-container">
 			<h1 id="name">WJON</h1>
-			<h2>Helping you face the realities of SEPTA</h2>
+			<h2 id="tagline">Helping you face the realities of SEPTA</h2>
 		</div>
 	</header>
 	<div>
