Styled body text as grey, created IDs for text fields, aligned accordingly

--- a/wjon.html
+++ b/wjon.html
@@ -11,14 +11,20 @@
 			<h2>getting you through your daily commute</h2>
 		</div>
 	</header>
-	<div>
-		<h1>What is WJON?</h1>
-		<p>WJON is a community-funded Ham radio channel serving the five-county area. Tune in for updates on regional rail delays, quiet car disruptions, platform aroma, commuter rage indices, etc.</p>
-		<p>Note: You will need to build a radio capable of receiving WJON's signal. We recommend you consult with Brian at the Ham Radio Outlet (1509 Dupont Hwy, New Castle, Delaware) or pick up a copy of Jack Campbell's "Ham Radio: The Ultimate Ham Radio Quickstart Guide- From Beginner to Expert," Harcourt, $12.99, paperbak.
+	<div id="maintext">
+		<h3>What is WJON?</h3>
+			<div class="greytext">
+
+				<p>WJON is a community-funded Ham radio channel serving the five-county area. Tune in for updates on regional rail delays, quiet car disruptions, platform aroma, commuter rage indices, etc.</p>
+				<p>Note: You will need to build a radio capable of receiving WJON's signal. We recommend you consult with Brian at the Ham Radio Outlet (1509 Dupont Hwy, New Castle, Delaware) or pick up a copy of Jack Campbell's "Ham Radio: The Ultimate Ham Radio Quickstart Guide- From Beginner to Expert," Harcourt, $12.99, paperback</p>
+			</div>
 	</div>
-	<div>
-		<h1>WJON Needs Money Immediately</h1>
-		<p>John Crodian is the loan broadcaster at WJON. He just sits in the back of a train car and yells into a transmitter until service shuts down. Your donation pays for his lunch.</p>
+	<div id="sidebar">
+		<h3>WJON Needs Money Immediately</h3>
+			<div class="greytext">
+				<p>John Crodian is the loan broadcaster at WJON. He just sits in the back of a train car and yells into a transmitter until service shuts down. Your donation pays for his lunch.</p>
+			</div>
+
 	</div>
 		<footer>
 			<div class= "interrogative">
