Added Give Us $ button

--- a/wjon.html
+++ b/wjon.html
@@ -8,7 +8,8 @@
 	<header>
 		<div class="header-container">
 			<h1 id="name">WJON</h1>
-			<h2 id="tagline">Helping you face the realities of SEPTA</h2>
+			<h3 id="tagline">Helping you face the realities of SEPTA</h3>
+			<h2 id="donate-button"> GIVE US $</h2>
 		</div>
 	</header>
 	<div>
