Added image with text overlay, rearranged text boxes, updated footer

--- a/wjon.html
+++ b/wjon.html
@@ -11,11 +11,13 @@
 			<h2 id="tagline">Helping you face the realities of SEPTA</h2>
 		</div>
 	</header>
-	<div>
-		<h1>What is WJON?</h1>
-		<h2> It is an AWESOME radio station!</h2>
-		<p>WJON is a community-funded HAM radio channel serving the five-county area. Tune in for updates on regional rail delays, quiet car disruptions, platform aroma, commuter rage indices, etc.</p>
+	
+
 	<div id="maintext">
+		<div class="imagecontainer">
+			<img src="IrateCommuter.jpg">
+			<h4><span>Because You Can't Believe This S***<span class='spacer'></span> <br /> <span class='spacer'></span>And Neither Can We</span></h4>
+		</div>
 		<h3>What is WJON?</h3>
 			<div class="greytext">
 
@@ -28,11 +30,11 @@
 			<div class="greytext">
 				<p>John Crodian is the loan broadcaster at WJON. He just sits in the back of a train car and yells into a transmitter until service shuts down. Your donation pays for his lunch.</p>
 			</div>
-
 	</div>
+	
 		<footer>
 			<div class= "interrogative">
-			<p>WHAT MORE IS THERE TO SAY????</p>
+			<h3>WHAT MORE IS THERE TO SAY????</h3>
 			</div>
 		<footer>
 </body>
