Added sidebar donate button Closes #1

--- a/donate.html
+++ b/donate.html
@@ -9,7 +9,7 @@
 		<div class="header-container">
 			<h1 id="name">WJON</h1>
 			<h3 id="tagline">Help us help you face the realities of SEPTA</h3>
-			<h2 id="donate-button"><a id="link" href="wjon.html"> Back to Homepage</a></h2>
+			<h2 class="donate-button"><a id="link" href="wjon.html"> Back to Homepage</a></h2>
 		</div>
 	</header>
 	<div>
