Got rid of sidebar on donate page and changed display of main donation text

--- a/donate.html
+++ b/donate.html
@@ -13,20 +13,14 @@
 		</div>
 	</header>
 	<div>
-	<div id="maintext">
+	<div id="donation-container">
 		<h3>WJON Needs Your Dollars!</h3>
 			<div class="greytext">
 
 				<p>WJON needs your money in order to both get on and complain about public transportation!  This is why this p tag will eventually have little boxes to enter your name and your donation amount along with a button that has the word "Donate Now" (aesthetically only, we don't learn background programming until next week).</p>
 			</div>
 	</div>
-	<div id="sidebar">
-		<h3>WJON Needs Money Immediately</h3>
-			<div class="greytext">
-				<p>John Crodian is the loan broadcaster at WJON. He just sits in the back of a train car and yells into a transmitter until service shuts down. Your donation pays for his lunch.</p>
-			</div>
-
-	</div>
+	
 		<footer>
 			<div class= "interrogative">
 			<p>WHAT MORE IS THERE TO SAY????</p>
