--- a/wjon.html
+++ b/wjon.html
@@ -22,14 +22,14 @@
 		<h3>What is WJON?</h3>
 			<div class="greytext">
 
-				<p>WJON is a community-funded Ham radio channel serving the five-county area. Tune in for updates on regional rail delays, quiet car disruptions, platform aroma, commuter rage indices, etc.</p>
-				<p>Note: You will need to build a radio capable of receiving WJON's signal. We recommend you consult with Brian at the Ham Radio Outlet (1509 Dupont Hwy, New Castle, Delaware) or pick up a copy of Jack Campbell's "Ham Radio: The Ultimate Ham Radio Quickstart Guide- From Beginner to Expert," Harcourt, $12.99, paperback</p>
+				<p class="palatino">WJON is a community-funded Ham radio channel serving the five-county area. Tune in for updates on regional rail delays, quiet car disruptions, platform aroma, commuter rage indices, etc.</p>
+				<p class= "palatino">Note: You will need to build a radio capable of receiving WJON's signal. We recommend you consult with Brian at the Ham Radio Outlet (1509 Dupont Hwy, New Castle, Delaware) or pick up a copy of Jack Campbell's "Ham Radio: The Ultimate Ham Radio Quickstart Guide- From Beginner to Expert," Harcourt, $12.99, paperback</p>
 			</div>
 	</div>
 	<div id="sidebar">
 		<h3>WJON Needs Money Immediately</h3>
 			<div class="greytext">
-				<p>John Crodian is the loan broadcaster at WJON. He just sits in the back of a train car and yells into a transmitter until service shuts down. Your donation pays for his lunch.</p>
+				<p class="palatino">John Crodian is the lone broadcaster at WJON. He just sits in the back of a train car and yells into a transmitter until service shuts down. Your donation pays for his lunch.</p>
 			</div>
 	</div>
 	
