Added mention of links page on homepage

--- a/wjon.html
+++ b/wjon.html
@@ -23,7 +23,7 @@
 			<div class="greytext">
 
 				<p class="palatino">WJON is a community-funded Ham radio channel serving the five-county area. Tune in for updates on regional rail delays, quiet car disruptions, platform aroma, commuter rage indices, etc.</p>
-				<p class= "palatino">Note: You will need to build a radio capable of receiving WJON's signal. We recommend you consult with Brian at the Ham Radio Outlet (1509 Dupont Hwy, New Castle, Delaware) or pick up a copy of Jack Campbell's "Ham Radio: The Ultimate Ham Radio Quickstart Guide- From Beginner to Expert," Harcourt, $12.99, paperback</p>
+				<p class= "palatino">Note: You will need to build a radio capable of receiving WJON's signal. We recommend you consult with Brian at the Ham Radio Outlet (1509 Dupont Hwy, New Castle, Delaware) or pick up a copy of Jack Campbell's "Ham Radio: The Ultimate Ham Radio Quickstart Guide- From Beginner to Expert," Harcourt, $12.99, paperback. You may also visit our <a href="links.html">links page</a> for more information.</p>
 			</div>
 	</div>
 	<div id="sidebar">
