latest of jons commits to master

--- a/wjon.html
+++ b/wjon.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html>
 <head>
@@ -9,7 +10,7 @@
 		<div class="header-container">
 			<h1 id="name">WJON</h1>
 			<h3 id="tagline">Helping you face the realities of SEPTA</h3>
-			<h2 id="donate-button"><a id="link" href="donate.html"> GIVE US $</a></h2>
+			<h2 class="donate-button"><a id="link" href="donate.html"> GIVE US $</a></h2>
 		</div>
 	</header>
 	
@@ -31,6 +32,7 @@
 			<div class="greytext">
 				<p class="palatino">John Crodian is the lone broadcaster at WJON. He just sits in the back of a train car and yells into a transmitter until service shuts down. Your donation pays for his lunch.</p>
 			</div>
+			<h2 class="donate-button" id="sidebar-button"><a id="link" href="donate.html"> GIVE US $</a></h2>
 	</div>
 	
 		<footer>
