Fixed the fact that donate link had disappeared on links page (which was due to an id changing to class in css)

--- a/links.html
+++ b/links.html
@@ -9,7 +9,7 @@
 		<div class="header-container">
 			<h1 id="name">WJON</h1>
 			<h3 id="tagline">Helping you face the realities of SEPTA</h3>
-			<h2 id="donate-button"><a id="link" href="donate.html"> GIVE US $</a></h2>
+			<h2 class="donate-button"><a id="link" href="donate.html"> GIVE US $</a></h2>
 		</div>
 	</header>
 </body>
