Took a screenshot of the image with text overlay and replaced the image with screenshot. Removed code corresponding to text overlay in HTML and CSS (closes issue #3)

--- a/wjon.html
+++ b/wjon.html
@@ -15,8 +15,8 @@
 	</header>
 	<div id="maintext">
 		<div class="imagecontainer">
-			<img src="IrateCommuter.jpg">
-			<h4><span>Because You Can't Believe This S***<span class='spacer'></span> <br /> <span class='spacer'></span>And Neither Can We</span></h4>
+			<img src="IrateCommuter.png">
+			
 		</div>
 		<h3>What is WJON?</h3>
 			<div class="greytext">
