Fixed typos on donate page, fixed footer to be consistent with homepage, and added border

--- a/donate.html
+++ b/donate.html
@@ -17,7 +17,7 @@
 		<h3>WJON Needs Your Dollars!</h3>
 		<div class="greytext">
 
-			<p>WJON needs your money in order to both get on and complain about public transportation!  If everyone gives a little, Jon can complain a lot!</p>
+			<p>WJON needs your money in order to both get on and complain about public transportation!  If everyone gives a little, John can complain a lot!</p>
 		</div>
 		<div id="donation-form">
 			<!- The following is copied code to make a search box. There is nothing in CSS corresponding to this code. The copied code is all inside of the form, although this code was tweaked to make it work for WJON purposes.-!>
@@ -32,13 +32,13 @@
 			</form>
 		</div>
 		<div class= "greytext">
-			<p> WJON will accept most major credit cards, paypal and of course you are welcome to throw cash at Jon in the back of the train (if you have coins, please place them, do not throw them).  You can add your donation on your taxes, although you will need to ask an actual CPA if that is even worth it or not.</p>
+			<p> WJON will accept most major credit cards, paypal and of course you are welcome to throw cash at John in the back of the train (if you have coins, please place them, do not throw them).  You can add your donation on your taxes, although you will need to ask an actual CPA if that is even worth it or not.</p>
 		</div>				
 	</div>
 	
 		<footer>
 			<div class= "interrogative">
-			<p>WHAT MORE IS THERE TO SAY????</p>
+			<h3>WHAT MORE IS THERE TO SAY????</h3>
 			</div>
 		<footer>
 </body>
