--- a/wjon.html
+++ b/wjon.html
@@ -3,10 +3,10 @@
 <html>
 <head>
 	<title>WJON</title>
-	<link rel="stylesheet" href="wjon.css">
 </head>
 <body>
 	<header>
+	<meta name="viewport" content="width=device-width", initial-scale="1.0">
 		<div class="header-container">
 			<h1 id="name">WJON</h1>
 			<h3 id="tagline">Helping you face the realities of SEPTA</h3>
